remove redundant connection testing