@@ -15,14 +15,14 @@ import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
+import java.io.FileNotFoundException;
 import java.io.IOException;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 @SuppressWarnings("unused")
-@DataCollectTag(tag = InternalNamespaces.Data.TESTSSL, type = SegmentMap.class, order = 4)
+@DataCollectTag(tag = InternalNamespaces.Data.TESTSSL, type = SegmentMap.class, order = 3)
 public class TestsslDataCollector implements DataCollector {
 
 	private static final Logger logger = LogManager.getLogger(TestsslDataCollector.class);
@@ -33,59 +33,61 @@ public class TestsslDataCollector implements DataCollector {
 
 		logger.info("Running testssl on " + host.getHost());
 
-		Boolean b = (Boolean) host.getCollectedData().get(InternalNamespaces.Data.HAS_SSL);
-		if (b == null ? false : b) {
+		if (!FileHelper.isDirExist(path)) FileHelper.createDir(path);
 
-			if (!FileHelper.isDirExist(path)) FileHelper.createDir(path);
+		String file = path + host.getHost() + ".txt";
 
-			String file = path + host.getHost() + ".txt";
-
-			String filename = FileHelper.Cache.getIfValidOrDefault(file, f -> {
-						String fl = FileHelper.readFile(f);
-						try {
-							JSONArray arr =
-									(JSONArray) new JSONObject("{\"list\": " + fl + "}")
-											.get("list");
-							for (Object object : arr) {
-								if (((String) ((JSONObject) object)
-										.get("severity")).trim().equals("FATAL") ||
-										((String) ((JSONObject) object)
-												.get("finding"))
-												.trim().equals("Scan interrupted"))
-									return false;
-							}
-
-							return arr.length() > 1 &&
-									FileHelper.Cache.isTempFileNotExpired(f);
-						} catch (JSONException e) {
-							return false;
+		String filename = FileHelper.Cache.getIfValidOrDefault(file, f -> {
+					String fl = FileHelper.readFile(f);
+					try {
+						JSONArray arr =
+								(JSONArray) new JSONObject("{\"list\": " + fl + "}")
+										.get("list");
+						for (Object object : arr) {
+							if (((String) ((JSONObject) object)
+									.get("severity")).trim().equals("FATAL") ||
+									((String) ((JSONObject) object)
+											.get("finding"))
+											.trim().equals("Scan interrupted"))
+								return false;
 						}
 
-					}, // isValid
-					f -> f, // valid
-					() -> { // invalid
-						// seems openssl-timeout could report a error in newer version
-						// while there is no program named timeout
-						run(ArgConfigurator.INSTANCE
-								.getByType(TestsslArgDelegate.class)
-								.getTestsslPath() + "/testssl.sh",
-								"-s", "-p", "-S", "-P", "-h", "-U",
-								"--warnings=off", "--jsonfile=" + file, host.getHost());
-						return file;
-					});
+						return arr.length() > 1 &&
+								FileHelper.Cache.isTempFileNotExpired(f);
+					} catch (JSONException e) {
+						return false;
+					}
 
+				}, // isValid
+				f -> f, // valid
+				() -> { // invalid
+					// seems openssl-timeout could report a error in newer version
+					// while there is no program named timeout
+					run("bash", "-c",
+							ArgConfigurator.INSTANCE
+									.getByType(TestsslArgDelegate.class)
+									.getTestsslPath() + "/testssl.sh" +
+									" -s -p -S -P -h -U --warnings=batch " +
+									"--jsonfile=" + file + " " + host.getHost() +
+									" > /dev/null");
+					return file;
+				});
+
+		try {
 			String result = FileHelper.readFile(filename);
 			List<Segment> r = new GsonBuilder().create()
 					.fromJson(result, new TypeToken<List<Segment>>() {
 					}.getType());
 			SegmentMap map = new SegmentMap();
 			r.forEach(map::add);
+			map.setComplete();
 			return map;
-
-		} else {
-			logger.warn("host " + host.getHost() + " do not have ssl connection, skipping.");
-			throw new RuntimeException(
-					"host " + host.getHost() + " do not have ssl connection, skipping.");
+		} catch (FileNotFoundException e) {
+			// testssl do not generate file with --warnings=batch
+			logger.error("host {} do not have ssl connection, skipping.",
+					host.getHost());
+			throw new RuntimeException("Host " + host.getHost() +
+					" do not have ssl connection");
 		}
 	}
 
@@ -95,12 +97,11 @@ public class TestsslDataCollector implements DataCollector {
 		// according to https://stackoverflow.com
 		// /questions/38393979/defunct-processes-
 		// when-java-start-terminal-execution
-		ProcessBuilder b = new ProcessBuilder(command);
-		b.redirectOutput(Paths.get("/dev/null").toFile()).redirectErrorStream(true);
-		Process pro = b.start();
+		//ProcessBuilder b = new ProcessBuilder(command);
+		//b.redirectOutput(Paths.get("/dev/null").toFile()).redirectErrorStream(true);
+		Process pro = Runtime.getRuntime().exec(command);
 
 		try {
-			// the input stream already read all bytes
 			if (!pro.waitFor(5, TimeUnit.MINUTES)) {
 				pro.destroy();
 				logger.error("Time limit exceeded, force terminated");
